client_viten/src/app/admin/create-survey/create-survey.component.scss
h1 {
  text-align: center;
  display: block;
}
h2.alignCenter {
  text-align: center;
  display: block;
}

.error {
  color: red;
}

md-card {
  md-input-container {
    width: 100%;
  }

  &.questionObject {
    flex: 1 1;
    margin: 5px;
    max-width: 250px;
    min-width: 250px;

    .modeSelect {
      md-select {
        display: block;
      }
      span.desc {
        display: block;
        font-size: 75%; // mimics md-hint
        &.invalid {
          color: red;
        }
      }
    }
    .actionsBox {
      display: flex;
      flex-flow: row-reverse nowrap;
      justify-content: space-between;
      .delete {
        align-self: flex-end;
      }
    }
    .dragHandle {
      // dragula dragging styles
      cursor: grab;
      .gu-transit {
        cursor: move !important;
      }
      // dragula styles end
    }
  }

}

md-input-container {
  margin: 10px 0 20px 0;
  md-hint {
    color: red;
  }
}


.flexParent {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
}

.surveyOptions {
  @extend .flexParent;
  align-items: stretch;
  md-card {
    flex: 1 1;
    min-width: 400px;
  }
}


.optionContainer {
  margin-bottom: 20px;
}

.startupLoading,
.submitBox {
  @extend .flexParent;
  justify-content: center;

  md-progress-circle,
  button {
    flex: 0 1;
  }
}

.submitLoading {
  display: block;
}

md-dialog-actions {
  button {
    margin-left: 10px;
    &:first-of-type {
      margin: 0;
    }
    &.alignRight {
      align-self: flex-end;
      text-align: right;
    }
  }
}

